doclava17: Add basic unit test infrastructure
In total, there are 32 classes and 250 methods to implement.

Bug: 260694901
Test: ./gradlew doclava17:test
Change-Id: I5f16bb9473d2a24fbf74d81c28eac08abf9fa340